swipegallery/global.css
body {
  overflow:hidden;
  font-family:"Tahoma","San-Serif" , "Microsoft Yahei UI Light";
  margin: 0px;
}

:root{
  --pinmark : rgba(247, 4, 4, 0.4);
  --selected-color:rgb(255, 173, 42);
  --menubar-color:rgb(143, 81, 0)
}
.popup { position:absolute;top:2vh;left:2vw;width:96vw;height:95vh;
  border-radius: 5px;
  background:rgba(255, 235, 164, 0.9);overflow:hidden;z-index: 99}
.tabs {--webkit-user-select: none;overflow:hidden  ; font-size:3.5vh;
  user-select: none;padding-left: 0.05em; background:var(--menubar-color);color:gold}

.loading {font-size:4vh}
.app {height:100vh;top:0px;background-color: rgb(243, 208, 160); } /* splitpane divider need this */
.closepopup {cursor:pointer;z-index:999;font-size:4vh;position:absolute;right:2vw;top:1vh;color:black;font-weight: bold;}

select {font-size:4vh}
.selected {background: rgb(255, 173, 42);border-radius: 0.25em;color:white}
.tab-content {
  position: absolute;
  height:90vh;
  width:100%;
  /* height:100%; */
    /* width:30vw; */
    /* !important; */
  opacity: 0;
  pointer-events: none;
  /* overflow:hidden; */
  overflow-y:auto;
}
.tab-content.visible {/* can't use visibility due to a weird painting bug in Chrome */
  opacity: 1;
  pointer-events: all;
  position:relative
}

.book {font-size:4vh;cursor:pointer}
.refer {text-decoration: underline;}
.clickable {border-bottom: rgb(255, 230, 0) solid 1px;cursor:pointer;}

.author {border:gray solid 1px ;border-radius: 0.25em;}
.selecteditem {background:rgb(255, 173, 42)}
.hr {height: 1px ;background:black}
.paralleltext {font-size:3vh;}
.toctext {font-size:3vh;}
.tocitem{margin-left: 0.5em;}
.dicttext {font-size:4vh}
.dictentry {font-size:6vh}
.endmarker {width:100%;text-align: center;height: 3em;}
.sourcetext{font-weight: bold;color:brown}


@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

.puncs {z-index:9;position:absolute;user-select: none;overflow:hidden;pointer-events: none;user-select: none;}
.punc {z-index:9;position:absolute;color:rgba(255, 14, 1,0.8);font-family: bolder;animation: fadeIn 1s}
.transcript {z-index:9;position:absolute;user-select: none;overflow:hidden;pointer-events: none;user-select: none;}


.strip {background:rgba(212, 194, 0, 0.4)}





.track {
  margin: 2vh 2vh;
  position: relative;
  height: 2vh;
  width: calc(100% - 4vh);
  border-radius: 100vh;
  background: var(--track-bg, #fffdf6);
}

.progress {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border-radius: 100vh;
  background: var(--progress-bg, #fef1a6);
}

.thumb {
  width: 3vh;
  height: 3vh;
  border-radius: 100vh;
  background: var(--thumb-bg, #d27700);
}
.subtitle{
  font-size:4vh;
}
.pagenumber {position:absolute ; bottom:4vh;font-size: 200%;left:0.5em;z-index: 99;color:brown}
.favoritebtn {cursor:pointer; position:absolute ; top:2vh;font-size: 200%;left:0.5em;z-index: 99;color:brown}
.favoriteitem {cursor:pointer;padding-right:0.3em;padding-left:0.3em}
@keyframes blinker {
  50% {
    opacity: 0;
  }
}


.remainrollback {
  animation: blinker 2s linear infinite;
  position:absolute; bottom:4vh;font-size: 200%;right:0.5em;z-index: 99;color:red
}

.idletime {
  animation: blinker 5s linear infinite;
  position:absolute; bottom:4vh;font-size: 100%;right:1em;z-index: 99;color:black
}



.bracket {
  font-size:80%;color:brown;
}

.welcome {font-size:6vh}

.center{
    width:100%;
    position: relative;
    display: flex;
    justify-content: center;
}
@keyframes paijiblinker {
  50% {
    opacity: 0.65;
  }
}

.paiji {
  pointer-events: none;
  animation: paijiblinker 8s linear infinite;
  position:absolute; 
  height: 100vh;
  width: 100vw;
  top:0;left:0;z-index: 999;
}

.paijitextcontainer{width:100%;justify-content: center;display:flex;padding-top:75vh}
.paijitext{
  pointer-events: none;
  font-size:5vw;
  color:yellow;
  z-index: 1999;
}
.sponsor {user-select:none;pointer-events:none;font-size:5vh;font-weight: bold; 
  line-height: 1.1em;
  position:absolute; color:yellow; width:1em; padding-left:46vw; padding-top:15vh}

.dictgroup {background:#ffb85b}

